# CanSat_2026_-

./: CMakeLists.txt  sdkconfig
FinalGuidance_ImageRecognition_Test/main/: PIN_WIRE.hpp
components.sencer/: ESP32S3SenseReceiver.cpp  GPS用コード.cpp  九軸センサー専用コード.cpp
components/Adafruit_BNO055/: CMakeLists.txt
components/Adafruit_BusIO/: CMakeLists.txt
components/Adafruit_Sensor/: CMakeLists.txt
main/: CMakeLists.txt  CanSatState.cpp  CanSatState.hpp  CanSat_EachFileConnect.hpp  MainAction.cpp  PIN_WIRE.hpp  ProGram_FRYING.cpp  ProGram_GOAL.cpp  ProGram_LANDING.cpp  ProGram_RUN.cpp  ProGram_STANDBY.cpp  ProGram_START.cpp  telemetry.cpp
